# ChangeLog for x11-themes/oxygen-gtk
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/oxygen-gtk/ChangeLog,v 1.65 2013/12/11 11:24:12 mrueg Exp $

*oxygen-gtk-1.4.1 (11 Dec 2013)
*oxygen-gtk-1.2.1 (11 Dec 2013)

  11 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +oxygen-gtk-1.2.1.ebuild,
  +oxygen-gtk-1.4.1.ebuild:
  Version bump for both slots.

  29 Nov 2013; Johannes Huber <johu@gentoo.org> -oxygen-gtk-1.1.4.ebuild,
  -oxygen-gtk-1.3.4.ebuild:
  Remove old.

  29 Nov 2013; Johannes Huber <johu@gentoo.org> oxygen-gtk-1.2.0.ebuild,
  oxygen-gtk-1.4.0.ebuild:
  x86 stable wrt bug #489490

  26 Oct 2013; Agostino Sarubbo <ago@gentoo.org> oxygen-gtk-1.2.0.ebuild,
  oxygen-gtk-1.4.0.ebuild:
  Stable for amd64, wrt bug #489490

*oxygen-gtk-1.4.0 (31 Aug 2013)
*oxygen-gtk-1.2.0 (31 Aug 2013)

  31 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +oxygen-gtk-1.2.0.ebuild,
  +oxygen-gtk-1.4.0.ebuild:
  Version bump

  30 Jun 2013; Johannes Huber <johu@gentoo.org> -oxygen-gtk-1.1.3.ebuild,
  -oxygen-gtk-1.3.3.ebuild:
  Remove old.

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> oxygen-gtk-1.1.4.ebuild,
  oxygen-gtk-1.3.4.ebuild:
  Stable for x86, wrt bug #473942

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> oxygen-gtk-1.1.4.ebuild,
  oxygen-gtk-1.3.4.ebuild:
  Stable for amd64, wrt bug #473942

  05 Jun 2013; Johannes Huber <johu@gentoo.org> -oxygen-gtk-1.1.2.ebuild,
  -oxygen-gtk-1.3.2.1.ebuild:
  Remove old.

  05 Jun 2013; Agostino Sarubbo <ago@gentoo.org> oxygen-gtk-1.1.3.ebuild,
  oxygen-gtk-1.3.3.ebuild:
  Stable for x86, wrt bug #471392

  04 Jun 2013; Agostino Sarubbo <ago@gentoo.org> oxygen-gtk-1.1.3.ebuild,
  oxygen-gtk-1.3.3.ebuild:
  Stable for amd64, wrt bug #471392

*oxygen-gtk-1.3.4 (01 Jun 2013)
*oxygen-gtk-1.1.4 (01 Jun 2013)

  01 Jun 2013; Johannes Huber <johu@gentoo.org> +oxygen-gtk-1.1.4.ebuild,
  +oxygen-gtk-1.3.4.ebuild:
  Version bump in slot 2 and 3.

*oxygen-gtk-1.1.3 (26 Apr 2013)