@@ -1,10 +1,14 @@
 DIST oxygen-gtk2-1.4.0.tar.bz2 198415 SHA256 84e24b78c71a73c38bfe41da609524307344060fe7e74fa9790380da234e1734 SHA512 a84ea72064c7e115f7cfabdbf40776d7055f7353c8b70e37c020bd010042e7b676ac996425c358efc5dd3c50fd810f271075ffa7c2f6d2510d8da7df16c7b1e5 WHIRLPOOL 75a51a57f1b43a68b44396e87b2180ee630bdb664fda9374a1f5b6e7654c55684418897f467050185d1245d0bfa761b68e8f66e201092a9b9c628e20672b3cf6
 DIST oxygen-gtk2-1.4.1.tar.bz2 197293 SHA256 8dab594f7ddd133068d2abe18bab023579e78b7108114780edaf40f43e6d798f SHA512 56e7e16de371c50874c986747289efa4d9cb0029850c408141432e5b19cf04acf05e6434fe2e6fd9ff92b5868871dd8369eb09ae04f8f68aa463b9c3309c52ef WHIRLPOOL 5b752c74c49889968dffbae375756b849f5bb042baf39cb92391809d5552e00518415fa959919df0da7f6c60991e09fa26be279b3052f91655073e36915d9d56
+DIST oxygen-gtk2-1.4.2.tar.bz2 200444 SHA256 b360b46743c0408efc987b1b869b2bb9cc8c5faad3a48624a56457b6d791fe18 SHA512 cfe995fa4ffc1881bb52ef992a03e8cf18b96ced989363da5fea14349d358fa1307efc3f2befee262c5cc5654c60423f55f3ae19ab262b50e0d81d0fd1c73856 WHIRLPOOL 169aead9246470a906e535a248120d7c7d466cddca352e6d4416aee96738c489c77d76a9d0a96f41571bbc817ac9e34254c1ad7d4ffa8e6175a197b1932eb958
 DIST oxygen-gtk3-1.2.0.tar.bz2 190583 SHA256 ea550bd215614c89704501d44479e0b3373db033d6026ce2244b70593241c61f SHA512 5d06102d4ce6a8709be3ec770dce1e8a309c7211720f4d089533d1e247d7a157d5579f622f609ba7a35ba04005a55ebb66163c893bac9fcc066a5fc66335b702 WHIRLPOOL 786e3598236c751c2f5c670507e89db3b39580f08b1dbef1cf06b8e802aab49d983c8f7175cc6eb7b97a7c405e3be8e4c57d6e911f7578c34ae83dcd6268e646
 DIST oxygen-gtk3-1.2.1.tar.bz2 189296 SHA256 91b8a3a024c224b2d0963e7ab2cab807e4361251129f843f6f2876f070950171 SHA512 c51af2ed5e5934317e33701f395ecc2eb08aebf5f78fc83bb6c9f42e24c6bf932290c3935ab359811010ef872b3f6fdb758cefb5f12ec53901715f2a2daef392 WHIRLPOOL b78f1d0530bc30640abfa2005967a8c69f9e2c5838feff77e152e279e21d9c45dae4995eae2ec9acea97e1f7edd1f25847e53842a0e7b065f252ce115f73d4fc
+DIST oxygen-gtk3-1.2.2.tar.bz2 189559 SHA256 15b46ca7756119eccaa4f6457b19eef8ca097106f1fc6a9475b06ac7447219f6 SHA512 70793bdc48ae3870c0736b15a33188e229a6a31cbd181edaa4aec091371a38a834f7d5cc0e0138a5a95f376b57a71cdb2bc60d88d91d35259b4ef684133ae1dd WHIRLPOOL 4bc0b1c53a723854a940b3d345fc9512e0eed566deaffa6db5529ab68318a15adc4b4cc6aaa998cd6ce28fb46adba1e2dfb3e3ba9f68d35d612b4f66522b0269
 EBUILD oxygen-gtk-1.2.0.ebuild 1143 SHA256 6ddf54e4a0b46ac26bf24bd582b1de0f695c94724150fcf225c9e2682e32b29a SHA512 812a7e1395f7ca7f88b54080e8f3ff39b932a84dd6452d7b92e3e8d6a929c2eef76fc53f03dc34960d56063b3632a70b0fd76c0c64f2a375219b8c92ddf6eb93 WHIRLPOOL 970d275e4290a9a599c932b50e753115080c17f2f8ba07f395153ce4259880ef141baea44cf6c9a96683fe894d4f4a6fc1447fe08754695477b269006fd0d582
 EBUILD oxygen-gtk-1.2.1.ebuild 1146 SHA256 ce4343eb707653d0d3ce8bdd6aa44528a2478b0d8a8cb47233e71f53accb6751 SHA512 72d61ff5c48cc0122ceaf327711896be810888ca67c504d9b436d8ebca40792e19c996ab6a5ce6fa093481eacd287aa92e8502cfa36503c677d9365f7bd88378 WHIRLPOOL ef8bebf5594bae043826a0a7616c99f2090b46fdd942a1f51f5398b7100abab14f3adff29899e7c1905b47854a9cfb4f42a2de33cb15acb9285e86127240ca91
+EBUILD oxygen-gtk-1.2.2.ebuild 1146 SHA256 bf32ca3e87680f41df7da276b2c5ee79be5201d720897fa4b88f0ca504402401 SHA512 957c1d2a4b9113f0c0b26b32ba4138c97cbeb4b0ad4211e0578da7ebd42aa47f83771012275ff7dd196b374c92642ce732b1be144089ad295cead2f4e881ccfb WHIRLPOOL cf86901b2d3a99a762875069550dc702f05cc513c7a5740ed729d4822b2d6612356cfe29538c6a0bc4c33048d9a007676129a917cc92582e7d3c402a20046fad
 EBUILD oxygen-gtk-1.4.0.ebuild 1152 SHA256 2499c7fdf5159d91e1cffb07cf541ad54aa822de94bff0de78d9a30b56aa1e60 SHA512 0036f8fd3667431818f33568417df49a4bebdb8af29d6fa29c9738481fcb4d1a0fdf9922a02aaac37f3e204f2fc639fbba13d95973dab374e717acd37a54f785 WHIRLPOOL bf590e3d2b0edbb35233edc335342e64707d41a957382a17de2a266ec77c4b37dfdd96b2b17894642148c9d162f5694ae00bcc067ccbff99b2588f8248f4b097
 EBUILD oxygen-gtk-1.4.1.ebuild 1155 SHA256 956da93004bf6df35d337e14129d954ea0a3fcdfd8ee7a287ff2f52fed92e240 SHA512 915cba43c9b9757e68c75a4c9709fb9de611252084857d6584ceece55dbc87ce9b041bcd9817a7079060ea6ccfda03c6f24ada09e9411d4007c58b20607e8088 WHIRLPOOL 3edade759b4dfb10f4259d49543ca97f4d47e664bfa46ce15b50092e4923d86b1699efcb7652313e40e88daaccf0cca0fd0edf490f1544c558d140ea93072c57
-MISC ChangeLog 10901 SHA256 06f613a11557fb5c4f3d83c561ca7eea5b35251435eea5753421aaeb03aa7ca0 SHA512 06d440a11b84f820b5b831215cf5a243a08134594174c604c7a9d6da058522e388f69b61e0d016b6a4db2a871da619d99290708618ef9c035ec50bd59d906274 WHIRLPOOL 11b1503ca2b9a05a3b227dfd4058c59fb9e2eab7b4f6f15af01848da049c0aee81631e2b9378fcd3960ff499a9e044be9d4f9aa2fde5afce0f21cd33069f6fd9
+EBUILD oxygen-gtk-1.4.2.ebuild 1155 SHA256 f638bcd2490180fd1c53f76205977ebd77f408167a4639d87571b5aa36fc4cbe SHA512 34b572dae65c5aeeec6d9b3fa1d2079f89c81d0236c8d8fd418114ba59ec10bf6e2286104ae6ad777b22a1e113695421a5e3cd34e3a69af7879ae1020525370c WHIRLPOOL d0fc38905287b1b6f3cc1a659c1d74e8c71a622e76f536ac8ef9f446cb46b0464f96d77341cc8b3484546d787487f69d0490646ff338e1f2c1182390dd8bbf63
+MISC ChangeLog 11085 SHA256 be53d517ad010f5c323a6f2fb960e47829bf2a74861645f279fdf400cceba218 SHA512 518f11811ad104f6bf838d40cff968f788f3ce4fdd6be91ddaa9aa55249bbdf7843f825ef6757c1fb7dc8c95c2867dcc6f5d39bc34d5ed046b5a324704baa3a4 WHIRLPOOL 3e921fd8df0e635f7fba24d2340331defc6cfb99029e38a228313562c29d883ed9871d7ffe2b2d3f05ebed1a0ca1878ff9c03b487a1924589b33242cc55188a2
 MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
