@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/oxygen-gtk
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/oxygen-gtk/ChangeLog,v 1.65 2013/12/11 11:24:12 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/oxygen-gtk/ChangeLog,v 1.66 2014/01/21 01:41:56 mrueg Exp $
+
+*oxygen-gtk-1.4.2 (21 Jan 2014)
+*oxygen-gtk-1.2.2 (21 Jan 2014)
+
+  21 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +oxygen-gtk-1.2.2.ebuild,
+  +oxygen-gtk-1.4.2.ebuild:
+  Version bump.
 
 *oxygen-gtk-1.4.1 (11 Dec 2013)
 *oxygen-gtk-1.2.1 (11 Dec 2013)
